cores, fontes, espaçamentos inseridos no arquivo de configuração

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Developer Portfolio Starter Files</title>
+  <!-- Prata -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+  <!-- Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="font-inter text-light-gray bg-black pt-10 leading-27">
+  <header class="px-4 flex items-center justify-between mb-20">
+    <a class="font-prata text-white text-lg" href="#">
+      Johnathan Specter
+    </a>
+    <nav class="hidden">
+      <ul>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#"></a>Chats</li>
+        <li><a href="#"></a>Awards</li>
+        <li><a href="#">About</a></li>
+      </ul>
+      <button>Get in touch</button>
+    </nav>
+    <button>
+      <img src="images/Hamburger Menu.svg" alt="Hamburger Menu">
+    </button>
+  </header>
+
+  <section class="px-4 mb-20">
+    <h1 class="font-prata text-white text-4xl leading-12 mb-3">Helping companies build better, scalable software.</h1>
+    <h2>
+      Award-winning web developer and author, with over 15+ years of working experience with Fortune 500 companies like Apple, Google, Facebook, and more.
+    </h2>
+    <ul class="mt-20 flex items-center justify-center flex-wrap gap-x-5 gap-y-4">
+      <li>
+        <img src="images/Logos/Walmart.svg" alt="logo Walmart">
+      </li>
+      <li>
+        <img src="images/Logos/JP Morgan.svg" alt="logo JP Morgan">
+      </li>
+      <li>
+        <img src="images/Logos/Visa.svg" alt="logo Visa">
+      </li>
+      <li>
+        <img src="images/Logos/Tinder.svg" alt="logo Tinder">
+      </li>
+      <li>
+        <img src="images/Logos/Samsung.svg" alt="logo Samsung">
+      </li>
+      <li>
+        <img src="images/Logos/Verizon.svg" alt="logo Verizon">
+      </li>
+    </ul>
+  </section>
+
+  <section class="px-4 mb-20">
+    <article class="mb-14">
+      <img src="images/Spense.png" alt="Spense">
+      <h3 class="heading-h3">Spense.com →</h3>
+      <p>
+        Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing, and less on when and how they'll get paid. Project in collaboration with Codewell.cc
+      </p>
+    </article>
+    <article>
+      <img src="images/YelpCamp.png" alt="YelpCamp">
+      <h3 class="heading-h3">YelpCamp.com →</h3>
+      <p>
+        Allowing backpack travelers to perfectly plan their trip through an open-source platform similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favorite in 2021.
+      </p>
+    </article>
+  </section>
 
 </body>
 
