--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,55 @@
     </article>
   </section>
 
+  <section class="px-4 mb-20 bg-dark-gray pb-16 pt-16">
+    <div>
+      <div class="mb-20">
+        <h4 class="heading-h3 leading-49 mb-2">A co-founder at one of the world's largest communities.</h4>
+        <p class="paragraph">
+          The combined experience I have working at the top Fortune 500 companies has allowed me to developer a skillset that helps me in not just development, but in every aspect of any
+          business
+        </p>
+        <p class="paragraph">
+          I'm proud to announce that I am now working at one of the world's largest communities teaching young minds about how to sell yourself as a developer and open them to a whole new world of opportunities.
+        </p>
+      </div>
+      <div>
+        <p>
+          As a developer, you have everything available to you and all that's holding you back is yourself.
+        </p>
+        <p class="paragraph">
+          A quote I live by perfectly illustrates what I mean.
+        </p>
+        <p class="paragraph">
+          "How big would you dream, if you knew you wouldn't fail?" You've already gone through the hardest parts being a developer, it's time to elevate your skills and become a leader in something you're passionate about.
+        </p>
+        <p class="paragraph">
+          I'm happy to chat over coffee some time about how I can help your company.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="px-4">
+    <h4 class="heading-h3 leading-49 mb-2">Interested in working with me?</h4>
+    <p>
+      I'm active on all social media platforms listed below, but you can also me an email and I will get back to you within 24-48 hours.
+    </p>
+    <button class="mt-3 text-black bg-yellow font-prata px-9 py-4">Get in touch</button>
+  </section>
+
+  <footer class="bg-dark-gray px-9 py-6 mt-20">
+    <div class="flex items-center justify-between">
+      <a class="font-prata text-white text-lg" href="#">
+        Johnathan Specter
+      </a>
+      <ul class="flex items-center gap-x-4">
+        <li><a href="#"><img src="images/Social Icons/Twitter.svg" alt="logo Twitter"></a></li>
+        <li><a href="#"><img src="images/Social Icons/LinkedIn.svg" alt="logo LinkedIn"></a></li>
+        <li><a href="#"><img src="images/Social Icons/Github.svg" alt="logo Github"></a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
