--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body class="font-inter text-light-gray bg-black pt-10 leading-27">
   <header class="px-4 md:px-10 flex items-center justify-between mb-20 lg:max-w-1140 lg:mx-auto">
-    <a class="font-prata text-white text-lg" href="#">
+    <a class="logo" href="#">
       Johnathan Specter
     </a>
     <nav class="hidden lg:flex justify-between flex-1">
@@ -62,14 +62,14 @@
 
   <section class="px-4 md:px-10 mb-20 lg:flex items-start justify-between lg:gap-x-20 lg:max-w-1140 lg:mx-auto">
     <article class="mb-14">
-      <img class="md:mx-auto lg:mx-0" src="images/Spense.png" alt="Spense">
+      <img class="md:mx-auto lg:mx-0 md:w-full lg:max-w-full" src="images/Spense.png" alt="Spense">
       <h3 class="heading-h3">Spense.com →</h3>
       <p>
         Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing, and less on when and how they'll get paid. Project in collaboration with Codewell.cc
       </p>
     </article>
     <article>
-      <img class="md:mx-auto lg:mx-0" src="images/YelpCamp.png" alt="YelpCamp">
+      <img class="md:mx-auto lg:mx-0 md:w-full lg:max-w-full" src="images/YelpCamp.png" alt="YelpCamp">
       <h3 class="heading-h3">YelpCamp.com →</h3>
       <p>
         Allowing backpack travelers to perfectly plan their trip through an open-source platform similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favorite in 2021.
@@ -116,7 +116,7 @@
 
   <footer class="bg-dark-gray px-9 py-6 mt-20">
     <div class="flex items-center justify-between lg:max-w-1140 lg:mx-auto">
-      <a class="font-prata text-white text-lg" href="#">
+      <a class="logo" href="#">
         Johnathan Specter
       </a>
       <ul class="flex items-center gap-x-4">
